update config a bit

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,7 @@
 name: coding & stuff
+url: http://grossjonas.github.io
+description: ... just some place to store coding notes and stuff
+
 markdown: kramdown
 highlighter: rouge
 safe: true
