finally make local jekyll look like github's and add a README(WIP)

--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,10 @@ paginate: 5
 
 exclude: ['README.md', 'Gemfile.lock', 'Gemfile', 'Rakefile']
 
+kramdown:
+  input: GFM
+  syntax_highlighter: rouge
+
 gems:
     - jekyll-feed
     - jekyll-paginate
