--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,6 @@ description: ... just some place to store notes on coding, devops, admin and oth
 
 markdown: kramdown
 highlighter: rouge
-safe: true
 lsi: false
 paginate: 5
 
@@ -14,6 +13,5 @@ kramdown:
   input: GFM
   syntax_highlighter: rouge
 
-gems:
-    - jekyll-feed
-    - jekyll-paginate
+gems: ['jekyll-feed', 'jekyll-paginate']
+
