--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,8 @@ name: coding & stuff
 url: http://grossjonas.github.io
 description: ... just some place to store notes on coding, devops, admin and other stuff
 
+#permalink: /:year/:month/:day/:title/
+
 markdown: kramdown
 highlighter: rouge
 lsi: false
@@ -14,4 +16,3 @@ kramdown:
   syntax_highlighter: rouge
 
 gems: ['jekyll-feed', 'jekyll-paginate']
-
