--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ highlighter: rouge
 lsi: false
 paginate: 5
 
-exclude: ['README.md', 'Gemfile.lock', 'Gemfile', 'Rakefile']
+exclude: [vendor, 'README.md', 'Gemfile.lock', 'Gemfile', 'Rakefile']
 
 kramdown:
   input: GFM
